--- a/index.html
+++ b/index.html
@@ -230,4 +230,39 @@
         <img src="images/hoodie1.jpg" alt="Hoodie 1">
         <div class="info">
           <h3>Classic Hoodie</h3>
-          <p>RM159
+          <p>RM159</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/cap1.jpg" alt="Cap 1">
+        <div class="info">
+          <h3>Avenyr Cap</h3>
+          <p>RM79</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section id="about">
+    <h2>About Avenyr</h2>
+    <p>Avenyr is a Malaysian streetwear brand born from creativity and ambition. Our mission is to merge minimal aesthetics with a bold edge, creating fashion that empowers self-expression. Each piece is made with precision and passion — for the dreamers, the creators, the streets.</p>
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Follow us & stay updated with our drops:</p>
+    <div class="social-links">
+      <a href="#">Instagram</a>
+      <a href="#">Twitter</a>
+      <a href="#">TikTok</a>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Avenyr Streetwear. All rights reserved.
+  </footer>
+</body>
+</html>
