--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       scroll-behavior: smooth;
     }
 
+    /* HEADER */
     header {
       position: fixed;
       top: 0;
@@ -29,21 +30,31 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 60px;
+      padding: 15px 60px;
       z-index: 1000;
       border-bottom: 1px solid #222;
     }
 
-    header h1 {
-      font-size: 28px;
-      font-weight: 700;
-      letter-spacing: 2px;
+    header .logo img {
+      height: 45px;
+      width: auto;
+      filter: brightness(0) invert(1);
+      transition: 0.3s ease;
+    }
+
+    header .logo img:hover {
+      opacity: 0.8;
+      transform: scale(1.05);
+    }
+
+    nav {
+      display: flex;
+      gap: 25px;
     }
 
     nav a {
       text-decoration: none;
       color: #fff;
-      margin-left: 25px;
       font-weight: 500;
       transition: 0.3s;
     }
@@ -52,12 +63,59 @@
       color: #aaa;
     }
 
+    /* HAMBURGER MENU */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle span {
+      background: white;
+      height: 3px;
+      width: 25px;
+      margin: 4px 0;
+      transition: 0.3s;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 30px;
+      }
+
+      nav {
+        position: absolute;
+        top: 70px;
+        right: 0;
+        background: #000;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        display: none;
+        border-top: 1px solid #222;
+      }
+
+      nav.active {
+        display: flex;
+        animation: fadeIn 0.3s ease;
+      }
+
+      @keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity: 1;}
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+    }
+
+    /* CONTENT */
     section {
       padding: 100px 60px;
       min-height: 100vh;
     }
 
-    /* Landing Section */
     #home {
       display: flex;
       flex-direction: column;
@@ -79,7 +137,7 @@
       max-width: 600px;
     }
 
-    /* Catalog Section */
+    /* CATALOG */
     #catalog {
       background: #111;
     }
@@ -136,7 +194,7 @@
       font-size: 15px;
     }
 
-    /* About Section */
+    /* ABOUT */
     #about {
       background: #000;
       text-align: center;
@@ -155,7 +213,7 @@
       line-height: 1.8;
     }
 
-    /* Contact Section */
+    /* CONTACT */
     #contact {
       background: #111;
       text-align: center;
@@ -188,9 +246,6 @@
     }
 
     @media (max-width: 600px) {
-      header {
-        padding: 15px 30px;
-      }
       #home h2 {
         font-size: 42px;
       }
@@ -199,8 +254,17 @@
 </head>
 <body>
   <header>
-    <h1>AVENYR</h1>
-    <nav>
+    <a href="#home" class="logo">
+      <img src="IMG-20251018-WA0034.jpg" alt="Avenyr Logo" style="height:45px;width:auto;filter:brightness(0) invert(1);">
+    </a>
+
+    <div class="menu-toggle" id="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <nav id="nav-menu">
       <a href="#home">Home</a>
       <a href="#catalog">Catalog</a>
       <a href="#about">About</a>
@@ -208,13 +272,11 @@
     </nav>
   </header>
 
-  <!-- HOME SECTION -->
   <section id="home">
     <h2>Avenyr Streetwear</h2>
     <p>Where bold design meets minimal elegance. Crafted for those who dare to stand out — streetwear with premium attitude.</p>
   </section>
 
-  <!-- CATALOG SECTION -->
   <section id="catalog">
     <h2 class="catalog-title">Our Collection</h2>
     <div class="catalog-grid">
@@ -244,13 +306,11 @@
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
   <section id="about">
     <h2>About Avenyr</h2>
     <p>Avenyr is a Malaysian streetwear brand born from creativity and ambition. Our mission is to merge minimal aesthetics with a bold edge, creating fashion that empowers self-expression. Each piece is made with precision and passion — for the dreamers, the creators, the streets.</p>
   </section>
 
-  <!-- CONTACT SECTION -->
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Follow us & stay updated with our drops:</p>
@@ -264,5 +324,15 @@
   <footer>
     © 2025 Avenyr Streetwear. All rights reserved.
   </footer>
+
+  <script>
+    // Hamburger menu toggle
+    const menuToggle = document.getElementById('menu-toggle');
+    const navMenu = document.getElementById('nav-menu');
+
+    menuToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
