--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Avenyr Streetwear</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
+  <!-- Premium Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Montserrat', sans-serif;
     }
 
     body {
       background-color: #000;
       color: #fff;
-      scroll-behavior: smooth;
+      overflow-x: hidden;
     }
 
-    /* HEADER */
+    /* Header */
     header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.85);
-      backdrop-filter: blur(8px);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px 60px;
+      padding: 15px 50px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      background-color: rgba(0, 0, 0, 0.9);
+      backdrop-filter: blur(5px);
       z-index: 1000;
-      border-bottom: 1px solid #222;
     }
 
-    header .logo img {
+    .logo img {
       height: 45px;
       width: auto;
-      filter: brightness(0) invert(1);
-      transition: 0.3s ease;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.25);
+      transition: transform 0.3s ease;
     }
 
-    header .logo img:hover {
-      opacity: 0.8;
+    .logo img:hover {
       transform: scale(1.05);
     }
 
@@ -53,56 +54,49 @@
     }
 
     nav a {
-      text-decoration: none;
       color: #fff;
-      font-weight: 500;
-      transition: 0.3s;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s;
     }
 
     nav a:hover {
-      color: #aaa;
+      color: #bbb;
     }
 
-    /* HAMBURGER MENU */
+    /* Hamburger */
     .menu-toggle {
       display: none;
       flex-direction: column;
+      justify-content: center;
       cursor: pointer;
     }
 
-    .menu-toggle span {
-      background: white;
+    .bar {
       height: 3px;
       width: 25px;
+      background: #fff;
       margin: 4px 0;
       transition: 0.3s;
     }
 
     @media (max-width: 768px) {
-      header {
-        padding: 15px 30px;
-      }
-
       nav {
-        position: absolute;
+        position: fixed;
         top: 70px;
-        right: 0;
-        background: #000;
+        right: -100%;
+        background: rgba(0, 0, 0, 0.95);
+        height: 100vh;
+        width: 60%;
         flex-direction: column;
         align-items: center;
-        width: 100%;
-        display: none;
-        border-top: 1px solid #222;
+        justify-content: center;
+        gap: 30px;
+        transition: right 0.4s ease-in-out;
       }
 
       nav.active {
-        display: flex;
-        animation: fadeIn 0.3s ease;
-      }
-
-      @keyframes fadeIn {
-        from {opacity: 0;}
-        to {opacity: 1;}
+        right: 0;
       }
 
       .menu-toggle {
@@ -110,161 +104,122 @@
       }
     }
 
-    /* CONTENT */
-    section {
-      padding: 100px 60px;
-      min-height: 100vh;
-    }
-
-    #home {
+    /* Hero Section */
+    .hero {
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #000 0%, #111 100%);
       text-align: center;
-      background: linear-gradient(180deg, #000 60%, #111 100%);
-    }
-
-    #home h2 {
-      font-size: 60px;
-      letter-spacing: 4px;
-      margin-bottom: 20px;
-    }
-
-    #home p {
-      font-size: 18px;
-      color: #bbb;
-      max-width: 600px;
-    }
-
-    /* CATALOG */
-    #catalog {
-      background: #111;
-    }
-
-    .catalog-title {
-      text-align: center;
-      font-size: 36px;
-      font-weight: 700;
-      margin-bottom: 50px;
-    }
-
-    .catalog-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 40px;
       padding: 0 20px;
     }
 
-    .item {
-      background: #000;
-      border-radius: 16px;
-      overflow: hidden;
+    .hero h1 {
+      font-size: 3.5rem;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+    }
+
+    .hero p {
+      margin-top: 15px;
+      color: #ccc;
+      max-width: 600px;
+    }
+
+    /* Catalog Section */
+    .catalog {
+      background-color: #111;
+      padding: 100px 60px;
+      text-align: center;
+    }
+
+    .catalog h2 {
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+    }
+
+    .product {
+      background: #1a1a1a;
+      padding: 20px;
+      border-radius: 15px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .item img {
+    .product:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    }
+
+    .product img {
       width: 100%;
-      height: 320px;
-      object-fit: cover;
-      transition: transform 0.4s ease;
+      border-radius: 10px;
+      margin-bottom: 15px;
     }
 
-    .item:hover img {
-      transform: scale(1.05);
+    .product h3 {
+      font-size: 1.2rem;
+      margin-bottom: 5px;
     }
 
-    .item:hover {
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
-      transform: translateY(-5px);
-    }
-
-    .info {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .info h3 {
-      margin-bottom: 8px;
-      font-weight: 600;
-    }
-
-    .info p {
+    .product p {
       color: #aaa;
-      font-size: 15px;
+      font-size: 0.95rem;
     }
 
-    /* ABOUT */
-    #about {
-      background: #000;
+    /* About & Contact */
+    section {
+      padding: 120px 60px;
       text-align: center;
     }
 
-    #about h2 {
-      font-size: 36px;
-      margin-bottom: 30px;
-    }
-
-    #about p {
-      color: #ccc;
-      font-size: 18px;
-      max-width: 800px;
-      margin: auto;
-      line-height: 1.8;
-    }
-
-    /* CONTACT */
-    #contact {
-      background: #111;
-      text-align: center;
-    }
-
-    #contact h2 {
-      font-size: 36px;
-      margin-bottom: 30px;
-    }
-
-    .social-links a {
-      color: white;
-      margin: 0 15px;
-      font-size: 24px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .social-links a:hover {
-      color: #888;
-    }
-
+    /* Footer */
     footer {
       background: #000;
+      padding: 40px;
       text-align: center;
-      padding: 20px;
-      color: #666;
-      font-size: 14px;
-      border-top: 1px solid #222;
+      color: #777;
+      font-size: 0.9rem;
     }
 
-    @media (max-width: 600px) {
-      #home h2 {
-        font-size: 42px;
+    @media (max-width: 768px) {
+      header {
+        padding: 15px 25px;
+      }
+
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+
+      .hero p {
+        font-size: 0.9rem;
       }
     }
   </style>
 </head>
+
 <body>
+
+  <!-- Header -->
   <header>
     <a href="#home" class="logo">
-      <img src="IMG-20251018-WA0034.jpg" alt="Avenyr Logo" style="height:45px;width:auto;filter:brightness(0) invert(1);">
+      <img src="logoavenyr.jpg" alt="Avenyr Logo">
     </a>
 
     <div class="menu-toggle" id="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
     </div>
 
-    <nav id="nav-menu">
+    <nav id="navbar">
       <a href="#home">Home</a>
       <a href="#catalog">Catalog</a>
       <a href="#about">About</a>
@@ -272,67 +227,12 @@
     </nav>
   </header>
 
-  <section id="home">
-    <h2>Avenyr Streetwear</h2>
-    <p>Where bold design meets minimal elegance. Crafted for those who dare to stand out — streetwear with premium attitude.</p>
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <h1>Avenyr Streetwear</h1>
+    <p>Bold • Minimal • Premium — redefining modern streetwear culture through exclusive design.</p>
   </section>
 
-  <section id="catalog">
-    <h2 class="catalog-title">Our Collection</h2>
-    <div class="catalog-grid">
-      <div class="item">
-        <img src="images/tee1.jpg" alt="T-shirt 1">
-        <div class="info">
-          <h3>Signature Tee</h3>
-          <p>RM99</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="images/hoodie1.jpg" alt="Hoodie 1">
-        <div class="info">
-          <h3>Classic Hoodie</h3>
-          <p>RM159</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="images/cap1.jpg" alt="Cap 1">
-        <div class="info">
-          <h3>Avenyr Cap</h3>
-          <p>RM79</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>About Avenyr</h2>
-    <p>Avenyr is a Malaysian streetwear brand born from creativity and ambition. Our mission is to merge minimal aesthetics with a bold edge, creating fashion that empowers self-expression. Each piece is made with precision and passion — for the dreamers, the creators, the streets.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Follow us & stay updated with our drops:</p>
-    <div class="social-links">
-      <a href="#">Instagram</a>
-      <a href="#">Twitter</a>
-      <a href="#">TikTok</a>
-    </div>
-  </section>
-
-  <footer>
-    © 2025 Avenyr Streetwear. All rights reserved.
-  </footer>
-
-  <script>
-    // Hamburger menu toggle
-    const menuToggle = document.getElementById('menu-toggle');
-    const navMenu = document.getElementById('nav-menu');
-
-    menuToggle.addEventListener('click', () => {
-      navMenu.classList.toggle('active');
-    });
-  </script>
-</body>
-</html>
+  <!-- Catalog Section -->
+  <section class="catalog" id="catalog">
+    <
